Closed Bug 1341023 Opened 8 years ago Closed 8 years ago

CreateJSStackObject is not taking the encoding of the module name into account

Categories

(Toolkit :: Telemetry, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox54 --- fixed

People

(Reporter: marco, Assigned: marco, Mentored)

Details

(Whiteboard: [measurement:client] [lang=c++])

Attachments

(1 file, 1 obsolete file)

Mentor: gfritzsche, alessio.placitelli
Priority: -- → P3
Whiteboard: [measurement:client] [lang=c++]
Attached patch Patch (obsolete) — Splinter Review
Assignee: nobody → mcastelluccio
Status: NEW → ASSIGNED
Attachment #8839250 - Flags: review?(alessio.placitelli)
Comment on attachment 8839250 [details] [diff] [review] Patch Review of attachment 8839250 [details] [diff] [review]: ----------------------------------------------------------------- This looks good Marco, thanks for the patch! There are just two tiny nits. Could you also mention in the docs (both sections + late writes) that module names can contain unicode characters? It's r+ with the fixes above. ::: toolkit/components/telemetry/ProcessedStack.h @@ +31,5 @@ > uint16_t mModIndex; > }; > struct Module > { > // The file name, /foo/bar/libxul.so for example. nit: can you also comment why we're switching to nsString? (i.e. module names can contain unicode characters). ::: toolkit/components/telemetry/tests/unit/test_TelemetryLateWrites.js @@ +20,5 @@ > const LOADED_MODULES = { > "4759A7E6993548C89CAF716A67EC242D00": "libtest.so", > "F77AF15BB8D6419FA875954B4A3506CA00": "libxul.so", > + "1E2F7FB590424E8F93D60BB88D66B8C500": "libc.so", > + "1E2F7FB590424E8F93D60BB88D66B8C500": "libmodμles.so", nit: doesn't matter much, but can we use a different hash for "libmodμles.so", so that differs from the one from the previous line?
Attachment #8839250 - Flags: review?(alessio.placitelli) → review+
Pushed by mcastelluccio@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/fbd5216f6a49 Take module name encoding into account for late writes and hangs. r=Dexter
Pushed by mcastelluccio@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/f52fb0ffd880 Add missing nsString.h include in ProcessedStack.h. r=me CLOSED TREE
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: