Bug 1341023 - Take module name encoding into account for late writes and hangs. r=Dexter