toolkit/components/telemetry/ProcessedStack.h
@@ -33,7 +33,8 @@ public:
   struct Module
   {
     // The file name, /foo/bar/libxul.so for example.
-    std::string mName;
+    // It can contain unicode characters.
+    nsString mName;
     std::string mBreakpadId;
 
     bool operator==(const Module& other) const;
